--- a/client/src/themes/styles/globals.scss
+++ b/client/src/themes/styles/globals.scss
@@ -2,11 +2,13 @@
   --main-background-color:#F8F5F0;
   --main-button-color:#FF9500;
   --danger-background-color:#FFEBEA;
-  --sucess-backgroud-color:#E7F7EB;
+  --sucess-background-color:#E7F7EB;
   --primary-active-background:#FFF4E6;
   --input-background-color:#FFFFFF;
   --input-border-color:#DFDAD4;
   --button-active-background:#E88800;
+  --primary-border-color:#F5F0E9;
+  --secondary-background-dark:#E8E8E7;
 
 
   --danger-color:#FF3B30;
