--- a/client/src/themes/components/button-component/button-component.module.scss
+++ b/client/src/themes/components/button-component/button-component.module.scss
@@ -6,8 +6,17 @@
     border-radius: 100px;
     color: var(--main-font-white) !important;
     transition: all 0.4s ease;
-    width: 100%;
+    width: 100% !important;
     cursor: pointer;
+
+    :global(.ant-btn-loading-icon) {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        font-size: 24px !important; /* Increase the size of the spinner */
+        width: 24px !important;     /* Set custom width */
+        height: 24px !important;    /* Set custom height */
+      }
 }
 
 .button:hover{
